kubernetes/cluster/default/minio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio-operator
---
apiVersion: v1
kind: Namespace
metadata:
  name: minio-tenant
